Closed Bug 1137004 Opened 9 years ago Closed 9 years ago

Fps-counter is cut off in a maximized window, (and it could use some right padding).

Categories

(Core :: Graphics: Layers, defect)

39 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: johan.charlez, Assigned: hthomas13, Mentored)

Details

(Whiteboard: good first bug)

Attachments

(2 files, 1 obsolete file)

STR:
1. Set "layers.acceleration.draw-fps" to true.
2. Maximize everything!

Note:
* If unable to maximize everything, see attached screenshot. On the left the window is maximized, on the right it is not.
* Additionally, you'll note that the fps counter could some some right padding.
Good first bug.

Relevant area of the code:
http://mxr.mozilla.org/mozilla-central/ident?i=DrawFPS&filter=

Let me know if you have any question.
Mentor: bgirard
Whiteboard: good first bug
Attached patch bug1137004_FPSCounterCutOff.diff (obsolete) — Splinter Review
I'm new to open source and this is my first attempt at a patch. Hopefully I did this right. I just modified where it was located, so it has a little left padding and is no longer cut off when maximized.
Attachment #8570778 - Flags: review?(matt.woodrow)
Attachment #8570778 - Flags: review?(matt.woodrow) → review+
Thank you for the review! I'm excited to be able to submit my first patch, which I'm working on right now. Could I get this bug assigned to me so I can have a record of it? I'm in an open source class and would like to show what I've done. I'll hopefully have that patch ready to check in soon!
Assignee: nobody → hthomas13
This has the same changes as the other one I uploaded, its just now in an actual .patch file instead of the .diff. Hopefully this is right. Again, this is my first time going through the process.
Attachment #8572365 - Flags: checkin+
Keywords: checkin-needed
Comment on attachment 8572365 [details] [diff] [review]
bug1137004FPSCounterCutOff.patch

That's not what the checkin flag is for :)
Attachment #8572365 - Flags: checkin+
Comment on attachment 8570778 [details] [diff] [review]
bug1137004_FPSCounterCutOff.diff

Please mark old patches as obsolete when attaching new ones.
Attachment #8570778 - Attachment is obsolete: true
(In reply to Ryan VanderMeulen [:RyanVM UTC-5] from comment #5)
> Comment on attachment 8572365 [details] [diff] [review]
> bug1137004FPSCounterCutOff.patch
> 
> That's not what the checkin flag is for :)

Oops! Sorry, like I said I'm new to this, I'm probably going to be stumbling around for a bit until I get a couple bugs under my belt :)
https://hg.mozilla.org/mozilla-central/rev/5cd2985b7a42
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: